# eToxPred-examples

./: .gitignore  README.md  USAGE.md
.github/workflows/: README.md  create-pr.yml  sync-iarc.yml  update-stats.yml
etoxpred/: custom_scores.csv  results_carcinogens.csv  results_endocrine.csv  results_nootropics.csv  results_psychoactive.csv
scripts/: pyproject.toml  rebuild_all.py  train_classifiers.py  update_stats.py
site/: chemicals.db  index.html
training_data/: carcinogens.smi  endocrine_disruptors.smi  nootropics.smi  psychoactive_drugs.smi
