[project]
name = "chemical-classifiers"
version = "1.0.0"
description = "Train toxicity classifiers for chemical compounds"
requires-python = ">=3.10"
dependencies = [
    "rdkit>=2023.9.1",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
]
